Notif time increase, Welcome overlap fix, other text relocated.

--- a/client/src/styles/questions.css
+++ b/client/src/styles/questions.css
@@ -152,7 +152,7 @@
 
 .addText {
   color: #6F6F6F;
-  font-size: 16px;
+  /* font-size: 16px; */
   font-weight: 500;
   line-height: 21px;
   /* position: absolute;
